--- a/src/OrderItemsReserver/Functions.csproj
+++ b/src/OrderItemsReserver/Functions.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.Azure.WebJobs" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Core" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage.Queues" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" />
   </ItemGroup>
   <ItemGroup>
