--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -32,6 +32,7 @@
     <PackageVersion Include="Microsoft.Azure.WebJobs" Version="3.0.37" />
     <PackageVersion Include="Microsoft.Azure.WebJobs.Core" Version="3.0.37" />
     <PackageVersion Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="5.12.0" />
+    <PackageVersion Include="Microsoft.Azure.WebJobs.Extensions.Storage.Queues" Version="5.1.3" />
     <PackageVersion Include="Microsoft.Extensions.Identity.Core" Version="7.0.5" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Configuration" Version="7.0.0" />
     <PackageVersion Include="Microsoft.NET.Sdk.Functions" Version="4.2.0" />
