--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -4,8 +4,8 @@
     "webBase": "https://localhost:5001/"
   },
   "ConnectionStrings": {
-    "CatalogConnection": "Server=tcp:eshoponweb-sql.database.windows.net,1433;Initial Catalog=CatalogDb;Persist Security Info=False;User ID=dzmitry_panaskou;Password=Azure@1950561;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "IdentityConnection": "Server=tcp:eshoponweb-sql.database.windows.net,1433;Initial Catalog=Identity;Persist Security Info=False;User ID=dzmitry_panaskou;Password=Azure@1950561;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
   },
   "CatalogBaseUrl": "",
   "Logging": {
