--- a/src/Web/Dockerfile
+++ b/src/Web/Dockerfile
@@ -1,27 +1,27 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
-WORKDIR /app
-EXPOSE 80
-EXPOSE 443
-
+# RUN ALL CONTAINERS FROM ROOT (folder with .sln file):
+# docker-compose build
+# docker-compose up
+#
+# RUN JUST THIS CONTAINER FROM ROOT (folder with .sln file):
+# docker build --pull -t web -f src/Web/Dockerfile .
+#
+# RUN COMMAND
+#  docker run --name eshopweb --rm -it -p 5106:5106 web
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
-WORKDIR /src
-COPY ["Directory.Packages.props", "."]
-COPY ["src/Web/Web.csproj", "src/Web/"]
-COPY ["src/ApplicationCore/ApplicationCore.csproj", "src/ApplicationCore/"]
-COPY ["src/BlazorShared/BlazorShared.csproj", "src/BlazorShared/"]
-COPY ["src/BlazorAdmin/BlazorAdmin.csproj", "src/BlazorAdmin/"]
-COPY ["src/Infrastructure/Infrastructure.csproj", "src/Infrastructure/"]
-RUN dotnet restore "src/Web/Web.csproj"
-COPY . .
-WORKDIR "/src/src/Web"
-RUN dotnet build "Web.csproj" -c Release -o /app/build
-
-FROM build AS publish
-RUN dotnet publish "Web.csproj" -c Release -o /app/publish /p:UseAppHost=false
-
-FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+
+COPY *.sln .
+COPY . .
+WORKDIR /app/src/Web
+RUN dotnet restore
+
+RUN dotnet publish -c Release -o out
+
+FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS runtime
+WORKDIR /app
+COPY --from=build /app/src/Web/out ./
+
+# Optional: Set this here if not setting it from docker-compose.yml
+# ENV ASPNETCORE_ENVIRONMENT Development
+
 ENTRYPOINT ["dotnet", "Web.dll"]
