--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -3,10 +3,8 @@
     "apiBase": "https://localhost:5099/api/",
     "webBase": "https://localhost:44315/"
   },
-  "ConnectionStrings": {
-    "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
-  },
+  "CatalogConnection": "Server=tcp:eshoponweb-sql.database.windows.net,1433;Initial Catalog=CatalogDb;Persist Security Info=False;User ID=dzmitry_panaskou;Password=Azure@1950561;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+  "IdentityConnection": "Server=tcp:eshoponweb-sql.database.windows.net,1433;Initial Catalog=Identity;Persist Security Info=False;User ID=dzmitry_panaskou;Password=Azure@1950561;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
   "CatalogBaseUrl": "",
   "Logging": {
     "IncludeScopes": false,
