--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -14,5 +14,23 @@
       "System": "Warning"
     },
     "AllowedHosts": "*"
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "EPAM.onmicrosoft.com",
+    "TenantId": "b41b72d0-4e9f-4c26-8a69-f949f367c91d",
+    "ClientId": "af32a579-33f8-4afc-a6e8-6682ceb6f583",
+    "CallbackPath": "/signin-oidc",
+    "Scopes": "access_as_user",
+    "ClientSecret": "Client secret from app-registration. Check user secrets/azure portal.",
+    "ClientCertificates": []
+  },
+  "MicrosoftGraph": {
+    "BaseUrl": "https://graph.microsoft.com/v1.0",
+    "Scopes": "user.read"
+  },
+  "DownstreamApi": {
+    "BaseUrl": "https://graph.microsoft.com/v1.0/me",
+    "Scopes": "user.read"
   }
 }
