--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -7,6 +7,10 @@
     "CatalogConnection": "Server=tcp:eshoponweb-sql.database.windows.net,1433;Initial Catalog=CatalogDb;Persist Security Info=False;User ID=dzmitry_panaskou;Password=Azure@1950561;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "IdentityConnection": "Server=tcp:eshoponweb-sql.database.windows.net,1433;Initial Catalog=Identity;Persist Security Info=False;User ID=dzmitry_panaskou;Password=Azure@1950561;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
+  "AzureFunctions": {
+    "OrderItemReserver": "https://orderitemreserver-dp.azurewebsite.net/api/OrderItemReserver",
+    "DeliveryOrderProcessor": "https://deliveryorderprocessor-dp.azurewebsite.net/api/DeliveryOrderProcessor"
+  }
   "CatalogBaseUrl": "",
   "Logging": {
     "IncludeScopes": false,
